# semantic-lang-gen

./: .envrc  .gitignore  README.md  cabal.project  flake.nix  foo.nix  justfile  nAmE.cabal  semantic.nix
app/: TypeGen.hs
app/Language/Go/: AST.hs
example/: grammar.js
nix/: generate-parser.nix  generate-semantic-lang.nix  generate-tree-sitter-lang.nix
semantic-arith/: semantic-arith.cabal
semantic-arith/app/: main.hs
semantic-arith/src/Language/Arith/: AST.hs
semantic-mini/: semantic-mini.cabal
semantic-mini/examples/: generate-semantic-arith.hs
semantic-mini/lib/AST/: Deserialize.hs  GenerateSyntax.hs  Parse.hs  Unmarshal.hs
semantic-mini/lib/AST/Grammar/: Examples.hs
semantic-mini/lib/AST/Marshal/: JSON.hs
semantic-mini/lib/Source/: Language.hs  Loc.hs  Range.hs
templates/: tree-sitter-foo.cabal
templates/TreeSitter/: Foo.hs
templates/semantic-lang/: Grammar.hs  semantic-lang.cabal
templates/semantic-lang-generator/: generate-semantic.hs  semantic-lang-generator.cabal
templates/tree-sitter-foo/: tree-sitter-foo.cabal
templates/tree-sitter-foo/TreeSitter/: Foo.hs
tree-sitter-gen/: tree-sitter-gen.cabal
tree-sitter-gen/app/: example-go.hs  generate-types.hs
tree-sitter-gen/lib/AST/: Deserialize.hs  Element.hs  GenerateSyntax.hs  TestHelpers.hs  Token.hs  Traversable1.hs  Unmarshal.hs
tree-sitter-gen/lib/AST/Grammar/: TH.hs
tree-sitter-gen/lib/AST/Marshal/: JSON.hs
tree-sitter-gen/lib/AST/Traversable1/: Class.hs
tree-sitter-gen/lib/Language/Go/: AST.hs
tree-sitter-gen/lib/Source/: Language.hs  Loc.hs  Range.hs  Source.hs  Span.hs
tree-sitter-sandbox/: tree-sitter-sandbox.cabal
tree-sitter-sandbox/app/: Main.hs  TypeGen.hs
tree-sitter-sandbox/app/AST/: Element.hs  Parse.hs
tree-sitter-sandbox/app/AST/Grammar/: Examples.hs
tree-sitter-sandbox/app/AST/Traversable1/: Class.hs
tree-sitter-sandbox/app/Language/Go/: AST.hs
tree-sitter-sandbox/app/Source/: Language.hs  Span.hs
