cabal-version: 3.0
name:          semantic-arith
version:       0.1.0.0
synopsis:      Semantic support for Arith.
description:   Semantic support for Arith.

common shared
  default-language: Haskell2010
  ghc-options:
    -Weverything -Wno-missing-local-signatures
    -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe
    -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction
    -Wno-missed-specialisations -Wno-all-missed-specialisations
    -Wno-star-is-type

  if impl(ghc >=8.8)
    ghc-options: -Wno-missing-deriving-strategies

  if impl(ghc >=8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module

  if impl(ghc >=9.2)
    ghc-options: -Wno-missing-kind-signatures

library
  import:          shared
  exposed-modules: Language.Arith.AST
  hs-source-dirs:  src
  build-depends:
    , base               >=4.13 && <5
    , fused-effects      ^>=1.1
    , semantic-mini
    , template-haskell
    , text
    , tree-sitter        ^>=0.9
    , tree-sitter-arith

  if impl(ghc >=9.10)
    build-depends: ghc-internal

executable semantic-arith
  import:        shared
  build-depends:
    , base
    , semantic-arith
    , semantic-mini
    , tree-sitter-arith

  main-is:       app/main.hs
