cabal-version: 3.0

name:           semantic-mini
version:        0.1.0

common shared
  default-language: GHC2021
  default-extensions:
    ImportQualifiedPost
  build-depends:
    , base
    , template-haskell
    , aeson
    , bytestring
    , text
    , attoparsec
    , containers
    , unordered-containers
    , hashable
    , deepseq
    , semilattices
    , filepath
    , directory
    , Glob
    , fused-effects
    , tree-sitter
    , tasty
    , tasty-hunit

library
  import: shared
  hs-source-dirs: lib
  exposed-modules:
    AST.Deserialize
    AST.Element
    AST.GenerateSyntax
    AST.Grammar.TH
    AST.Marshal.JSON
    AST.Parse
    AST.TestHelpers
    AST.Token
    AST.Traversable1
    AST.Traversable1.Class
    AST.Unmarshal
    Source.Language
    Source.Loc
    Source.Range
    Source.Source
    Source.Span
  other-modules:
    Paths_semantic_mini
