cabal-version: 3.0
name:          semantic-mini
version:       0.1.0

common shared
  default-language:   GHC2021
  default-extensions: ImportQualifiedPost
  build-depends:
    , aeson
    , attoparsec
    , base
    , bytestring
    , containers
    , deepseq
    , directory
    , filepath
    , fused-effects
    , Glob
    , hashable
    , semilattices
    , tasty
    , tasty-hunit
    , template-haskell
    , text
    , tree-sitter
    , unordered-containers

library
  import:          shared
  hs-source-dirs:  lib
  exposed-modules:
    AST.Deserialize
    AST.Element
    AST.GenerateSyntax
    AST.Grammar.TH
    AST.Marshal.JSON
    AST.Parse
    AST.TestHelpers
    AST.Token
    AST.Traversable1
    AST.Traversable1.Class
    AST.Unmarshal
    Source.Loc
    Source.Range
    Source.Source
    Source.Span

  other-modules:   Paths_semantic_mini

executable generate-semantic-arith
  import:         shared
  main-is:        generate-semantic-arith.hs
  hs-source-dirs: examples
  build-depends:
    , directory
    , filepath
    , generic-lens
    , lens
    , neat-interpolation
    , process
    , semantic-mini
    , template-haskell
    , text
    , tree-sitter
    , tree-sitter-arith