cabal-version: 3.0

name:           tree-sitter-gen
version:        0.1.0
build-type:     Simple

common shared
  default-language: GHC2021
  default-extensions:
    ImportQualifiedPost
  build-depends:
    , base
    , template-haskell
    , aeson
    , bytestring
    , text
    , attoparsec
    , containers
    , unordered-containers
    , hashable
    , deepseq
    , semilattices
    , filepath
    , directory
    , Glob
    , fused-effects
    , lingo
    , tree-sitter
    , tree-sitter-go
    , tree-sitter-haskell
    , tasty
    , tasty-hunit

library
  import: shared
  hs-source-dirs: lib
  exposed-modules:
    AST.Deserialize
    AST.Element
    AST.GenerateSyntax
    AST.Grammar.Examples
    AST.Grammar.TH
    AST.Marshal.JSON
    AST.Parse
    AST.TestHelpers
    AST.Token
    AST.Traversable1
    AST.Traversable1.Class
    AST.Unmarshal
    Language.Go.AST
    Source.Language
    Source.Loc
    Source.Range
    Source.Source
    Source.Span
  other-modules:
    Paths_tree_sitter_gen

executable example-go
  import: shared
  hs-source-dirs: app
  main-is: example-go.hs   
  build-depends:
    , tree-sitter-gen
    , tree-sitter-go

