cabal-version: 3.0

name:           tree-sitter-gen
version:        0.1.0

common shared
  default-language: GHC2021
  default-extensions:
    ImportQualifiedPost
  build-depends:
    , base
    , template-haskell
    , aeson
    , bytestring
    , text
    , attoparsec
    , containers
    , unordered-containers
    , hashable
    , deepseq
    , semilattices
    , filepath
    , directory
    , Glob
    , fused-effects
    -- , lingo
    , tree-sitter
    , tasty
    , tasty-hunit

executable example-go
  import: shared
  hs-source-dirs: app
  main-is: example-go.hs   
  build-depends:
    , semantic-mini

executable generate-types
  import: shared
  hs-source-dirs: app
  main-is: generate-types.hs
  build-depends:
    , semantic-mini
    , lens
    , generic-lens
    , process
    , neat-interpolation
