cabal-version: 3.0
name:          semantic-lang-generator
version:       0.1.0

executable generate-semantic
  hs-source-dirs: .
  main-is:        generate-semantic.hs
  build-depends:
    , base
    , directory
    , filepath
    , generic-lens
    , lens
    , neat-interpolation
    , process
    , template-haskell
    , text
    , tree-sitter
    , tree-sitter-foo
