cabal-version:       3.0
name:                tree-sitter-foo
version:             0.1.0.0
description:         This package provides a parser for Foo suitable for use with the tree-sitter package.

data-files:          vendor/tree-sitter-foo/src/node-types.json

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module
  if (impl(ghc >= 9.2))
    ghc-options:
      -Wno-missing-kind-signatures
      -Wno-implicit-lift

library
  import: common
  exposed-modules:     TreeSitter.Foo
  autogen-modules:     Paths_tree_sitter_foo
  other-modules:       Paths_tree_sitter_foo
  build-depends:       base
                     , tree-sitter
  Include-dirs:        vendor/tree-sitter-foo/src
  install-includes:    tree_sitter/parser.h
  c-sources:           vendor/tree-sitter-foo/src/parser.c
  extra-libraries:     stdc++
